@@ -184,11 +184,11 @@
 
 
 	<Frame name="TellMeWhen_Main_Efficiency" inherits="TellMeWhen_OptionsModuleContainer" virtual="true">
-		<Size y="45"/>
+		<Size y="110"/>
 		<Frames>
 			<Slider parentKey="Interval" inherits="TellMeWhen_SliderTemplate">
 				<Anchors>
-					<Anchor point="BOTTOM" y="7"/>
+					<Anchor point="TOP" y="-20"/>
 					<Anchor point="LEFT" x="10"/>
 					<Anchor point="RIGHT" relativePoint="CENTER" x="-10" />
 				</Anchors>
@@ -207,7 +207,7 @@
 			</Slider>
 			<Slider parentKey="EffThreshold" inherits="TellMeWhen_SliderTemplate">
 				<Anchors>
-					<Anchor point="BOTTOM" y="7"/>
+					<Anchor point="TOP" relativeKey="$parent.Interval" />
 					<Anchor point="RIGHT" x="-10" />
 					<Anchor point="LEFT" relativePoint="CENTER" x="10" />
 				</Anchors>
@@ -223,6 +223,35 @@
 					</OnLoad>
 				</Scripts>
 			</Slider>
+
+			<CheckButton parentKey="BackupDbInOptions" inherits="TellMeWhen_CheckTemplate">
+				<Anchors>
+					<Anchor point="TOP" relativeKey="$parent.Interval" relativePoint="BOTTOM" y="-8"/>
+					<Anchor point="LEFT" x="5"/>
+				</Anchors>
+				<Scripts>
+					<OnLoad>
+						TMW:CInit(self)
+
+						self:SetTexts(TMW.L["UIPANEL_ENABLEBACKUP"], TMW.L["UIPANEL_ENABLEBACKUP_DESC"])
+						self:SetSetting("BackupDbInOptions")
+					</OnLoad>
+				</Scripts>
+			</CheckButton>
+
+			<CheckButton parentKey="CreateImportBackup" inherits="TellMeWhen_CheckTemplate">
+				<Anchors>
+					<Anchor point="TOPLEFT" relativeKey="$parent.BackupDbInOptions" relativePoint="BOTTOMLEFT"/>
+				</Anchors>
+				<Scripts>
+					<OnLoad>
+						TMW:CInit(self)
+
+						self:SetTexts(TMW.L["UIPANEL_ENABLEIMPORTBACKUP"], TMW.L["UIPANEL_ENABLEIMPORTBACKUP_DESC"])
+						self:SetSetting("CreateImportBackup")
+					</OnLoad>
+				</Scripts>
+			</CheckButton>
 		</Frames>
 		<Scripts>
 			<OnLoad>
