@@ -1,5 +1,6 @@
 ===v8.4.3===
 * Minor options UI improvements.
+* Added options to disable TMW's built-in settings backup and the "backup" import source.
 
 ===v8.4.2===
 * Version bump & additional fixes for patch 7.3.0.
